--- a/circle.yml
+++ b/circle.yml
@@ -3,12 +3,13 @@ machine:
     Asia/Tokyo
   services:
     - docker
+dependencies:
+  cache_directories:
+    - ~/cache
 test:
   post:
-    - docker build -t centos6/ruby-rpm -f Dockerfile-6 .
-    - docker build -t centos7/ruby-rpm -f Dockerfile-7 .
-    - docker run -v $CIRCLE_ARTIFACTS:/shared:rw centos6/ruby-rpm /bin/sh ./rubybuild.sh
-    - docker run -v $CIRCLE_ARTIFACTS:/shared:rw centos7/ruby-rpm /bin/sh ./rubybuild.sh
+    - ./bootstrap-docker.sh 6
+    - ./bootstrap-docker.sh 7
 deployment:
   master:
     branch: master
