--- a/Dockerfile-7
+++ b/Dockerfile-7
@@ -8,13 +8,13 @@ RUN yum install -y rpm-build tar make
 # ruby depends
 RUN yum -y install readline-devel ncurses-devel gdbm-devel glibc-devel gcc openssl-devel libyaml-devel libffi-devel zlib-devel
 
-# create build user
-RUN useradd -u 1000 rpmbuilder
+# rpmbuild command recommends to use `builder:builder` as user:group.
+RUN useradd -u 1000 builder
 
 # build
-RUN mkdir -p /home/rpmbuilder/rpmbuild/{BUILD,BUILDROOT,RPMS,SOURCES,SPECS,SRPMS}
-RUN chown rpmbuilder:rpmbuilder /home/rpmbuilder/rpmbuild/{BUILD,BUILDROOT,RPMS,SOURCES,SPECS,SRPMS}
-WORKDIR /home/rpmbuilder/rpmbuild
-ADD script/rubybuild.sh /home/rpmbuilder/rpmbuild/rubybuild.sh
-ADD ruby.spec /home/rpmbuilder/rpmbuild/SPECS/ruby.spec
-ADD ruby-version /home/rpmbuilder/rpmbuild/SOURCES/ruby-version
+RUN mkdir -p /home/builder/rpmbuild/{BUILD,BUILDROOT,RPMS,SOURCES,SPECS,SRPMS}
+RUN chown builder:builder /home/builder/rpmbuild/{BUILD,BUILDROOT,RPMS,SOURCES,SPECS,SRPMS}
+WORKDIR /home/builder/rpmbuild
+ADD script/rubybuild.sh /home/builder/rpmbuild/rubybuild.sh
+ADD ruby.spec /home/builder/rpmbuild/SPECS/ruby.spec
+ADD ruby-version /home/builder/rpmbuild/SOURCES/ruby-version
