Add slack notification for only master branch

--- a/circle.yml
+++ b/circle.yml
@@ -16,3 +16,8 @@ deployment:
     branch: master
     commands:
       - ./script/github-release.sh
+experimental:
+  notify:
+    branches:
+      only:
+        - master
